@@ -55,3 +55,5 @@ slowMotion = Slow Motion
 normal = Normal
 readoutFeet = {0} feet
 readoutMeters = {0} meters
+readoutMeter = {0} meter
+readoutFoot = {0} foot
