@@ -1,3 +1,5 @@
+Scene 1: Reworded "1 feet" to "1 foot" and "1 meters" to "1 meter"
+Scene 1: Fixed: The grid no longer aligns with the pool
 # 0.00.55 (63762) Apr 26, 2012
 Scene 1: Improved water height readout formatting
 Scene 1: Added input faucet
